--- a/css/style.css
+++ b/css/style.css
@@ -50,10 +50,8 @@ header .hamburger {
   flex-direction: column;
   justify-content: center;
   text-align: center;
-}
-.headings h1 {
-  color: black;
-  font-family: sans-serif;
+  font-family: roboto, sans-serif;
+  text-align: center;
 }
 
 .hero-container {
@@ -326,6 +324,57 @@ header .hamburger {
   border-radius: 0.25em;
 }
 
+.skills-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  max-width: 1080px;
+  margin: 0 auto;
+  float: none;
+  margin-top: 2rem;
+  justify-content: space-around;
+  flex-direction: column;
+}
+.skills-container .skills-title {
+  font-family: roboto, sans-serif;
+  text-align: center;
+  font-size: 30px;
+}
+.skills-container .skill-title {
+  font-family: roboto, sans-serif;
+  font-size: 1.5em;
+  margin: 0.2em;
+}
+
+.skill {
+  width: 100%;
+  padding: 0.3em;
+  border-radius: 1em;
+  font-family: roboto;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+}
+.skill .skill-tag {
+  border: 2px black solid;
+  border-radius: 0.5em;
+  padding: 0.4em;
+  margin: 0.5em;
+  width: fit-content;
+}
+.skill .skill-tag:hover {
+  background-color: #035e7b;
+  color: #eff1c5;
+}
+
+.skill-box {
+  border: 2px black solid;
+  border-radius: 0.5em;
+  padding: 0.4em;
+  margin: 1em;
+}
+
 .contact-section {
   display: flex;
   flex-direction: row;
@@ -443,6 +492,10 @@ footer a:hover {
 
   .blog .blog-copy {
     width: 100%;
+  }
+
+  .skill {
+    flex-direction: column;
   }
 }
 
