--- a/css/style.scss
+++ b/css/style.scss
@@ -139,10 +139,8 @@ header{
 .headings{
     @include centre-text();
 
-    h1{
-        color: black;
-        font-family: sans-serif;
-    }
+    font-family: roboto, sans-serif;
+    text-align: center;
 }
 
 
@@ -406,8 +404,6 @@ header{
 }
 
 
-
-
 .button{
     display: inline-block;
     text-decoration: none;
@@ -416,6 +412,76 @@ header{
     padding: 0.5em 1.25em;
     border-radius: 0.25em;
 }
+
+
+
+
+.skills-container{
+    // border: 2px black solid;
+
+    @include responsive-container();
+    @include max-size();
+    @include card-helmet();
+    justify-content: space-around;
+    flex-direction: column;
+
+    .skills-title{
+        font-family: roboto, sans-serif;
+        text-align: center;
+        font-size: 30px;
+    }
+
+    .skill-title{
+        font-family: roboto, sans-serif;
+        font-size: 1.5em;
+        margin: 0.2em;
+
+    }
+    
+}
+
+
+
+
+.skill{
+    width: 100%;
+    padding: 0.3em;
+    border-radius: 1em;
+    
+    font-family: roboto;
+
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+
+    .skill-tag{   
+    
+        border: 2px black solid;
+        border-radius: 0.5em;
+        padding: 0.4em;
+        margin: 0.5em; 
+    
+        width: fit-content;
+    
+        &:hover{
+        background-color: $color4;
+        color: $color3;
+        }
+    }
+
+}
+
+.skill-box{
+    border: 2px black solid;
+    border-radius: 0.5em;
+    padding: 0.4em; 
+    margin: 1em;
+
+    // background-color: $color3;
+}
+
+
 
 
 
@@ -568,5 +634,13 @@ footer{
             width: 100%;
         }
     }
+
+    
+    .skill{
+        flex-direction: column;
+    }
+
+
+
 
 }
