--- a/css/style.scss
+++ b/css/style.scss
@@ -494,6 +494,15 @@ header{
     @include max-size();
     @include card-helmet();
     justify-content: space-around;
+
+    font-family: roboto, sans-serif;
+
+    a{
+        display: block;
+        height: fit-content;
+        width: fit-content;
+        text-decoration: none;
+    }
 }
 
 
@@ -502,11 +511,12 @@ header{
     height: 35%;
     width: 35%;
     min-width: 300px;
-    background-color: $color4;
-    color: white;
     margin: 1em;
     padding: 1em;
     border-radius: 0.5em;
+    
+    color: black;
+    border: 2px solid black;
 
     img{
         width: 100px;
