--- a/css/style.scss
+++ b/css/style.scss
@@ -522,6 +522,11 @@ header{
         width: 100px;
         height: 100px;
     }
+
+    &:hover{
+        background-color: $color3;
+        transform: scale(1.1);
+    }
 }
 
 
