--- a/css/style.css
+++ b/css/style.css
@@ -430,33 +430,53 @@ footer {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   background-color: #035e7b;
   margin-top: 4em;
+  font-family: roboto, sans-serif;
 }
 footer .socials {
-  justify-content: space-between;
   padding: 1em 0;
+  width: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+footer .site-links {
+  font-size: 1.5em;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 50%;
+}
+footer .site-links ul {
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0;
+}
+footer .site-links li {
+  list-style-type: none;
+  width: fit-content;
+}
+footer .site-links a {
+  text-decoration: none;
+  color: black;
+}
+footer .site-links a:hover {
+  color: #eff1c5;
+  border: 2px #eff1c5 dashed;
 }
 footer img {
   width: 50px;
   height: 50px;
 }
-footer ul {
-  padding: 10px;
-  list-style: none;
-}
-footer li {
-  font-size: 1.5em;
-  color: white;
-}
-footer a {
-  text-decoration: none;
-  font-family: sans-serif;
-  color: #eff1c5;
-}
-footer a:hover {
-  color: black;
+footer img:hover {
+  transform: scale(1.3);
+  border: 2px #eff1c5 dashed;
 }
 
 @media screen and (max-width: 767px) {
