--- a/css/style.scss
+++ b/css/style.scss
@@ -300,14 +300,19 @@ header{
 .blog-section{
     @include responsive-container();
     @include max-size();
-    @include headings();
-    @include paragraphs();
+    // @include headings();
+    // @include paragraphs();
+
+    font-family: roboto, sans-serif;
+
     
 }
 
 
 .blog{
-    background-color: grey;
+    background-color: $color2;
+    box-shadow: 2px 4px;
+
     flex-direction: column;
     justify-content: center;
 
@@ -317,6 +322,7 @@ header{
 
     .blog-top{
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
         padding: 0 1em;
         align-items: center;
@@ -326,17 +332,35 @@ header{
         display: inline-flex;
     }
 
-    img{
-        width: 100%;
-        height: 20em;
+    .blog-copy{
+        margin: 1em;
     }
 
 
-    .blog-copy{
-        width: 70%;
+    .btn-div{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    button{
+        background-color: $color2;
+        padding: 1em;
+        border-radius: 0.5em;
+
+
+        &:hover{
+            background-color: $color4;
+            color: white;
+        }
     }
 
 }
+
+
+
+
+
 
 
 // 
