--- a/css/style.css
+++ b/css/style.css
@@ -211,10 +211,18 @@ header .hamburger {
   align-items: center;
 }
 .blog .blog-body {
-  display: inline-flex;
+  display: flex;
+}
+.blog .blog-body img {
+  width: 100%;
+  height: auto;
 }
 .blog .blog-copy {
-  margin: 1em;
+  margin: 0 1em;
+  width: 50%;
+}
+.blog .blog-copy p {
+  margin: 0;
 }
 .blog .btn-div {
   display: flex;
@@ -488,15 +496,6 @@ footer img:hover {
 }
 
 @media screen and (max-width: 767px) {
-  .hamburger {
-    background-image: url(/img/icons/hamburger.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    margin-right: 1em;
-    width: 50px;
-    height: 50px;
-  }
-
   .nav-list {
     display: none;
   }
@@ -511,20 +510,29 @@ footer img:hover {
     height: 100%;
   }
 
-  .blog-top {
+  .blog {
     flex-direction: column;
   }
-
-  .blog-body {
-    flex-direction: column;
-  }
-
   .blog .blog-copy {
-    width: 100%;
+    width: 90%;
+  }
+  .blog .blog-top {
+    flex-direction: column;
+  }
+  .blog .blog-body {
+    flex-direction: column;
   }
 
   .skill {
     flex-direction: column;
+  }
+}
+@media screen and (max-width: 767px) {
+  .blog .blog-copy {
+    margin: 1em;
+  }
+  .blog .blog-top {
+    text-align: center;
   }
 }
 
