--- a/css/style.scss
+++ b/css/style.scss
@@ -331,6 +331,8 @@ header{
     padding-bottom: 1em;
     border-radius: 0.5em;;
 
+
+
     .blog-top{
         display: flex;
         flex-wrap: wrap;
@@ -340,11 +342,21 @@ header{
     }
 
     .blog-body{
-        display: inline-flex;
+        display: flex;
+
+        img{
+            // display: none;
+            width: 100%;
+            height: auto;
+        }
     }
 
     .blog-copy{
-        margin: 1em;
+        margin: 0 1em;
+        width: 50%;
+        p{
+            margin: 0;
+        }
     }
 
 
@@ -724,16 +736,6 @@ footer{
 //
 @media screen and (max-width:767px){
 
-    .hamburger{
-        background-image: url(/img/icons/hamburger.png);
-        background-repeat: no-repeat;
-        background-size: cover;
-        margin-right: 1em;
-        width: 50px;
-        height: 50px;
-        
-
-    }
 
     .nav-list{
         display: none;
@@ -750,17 +752,20 @@ footer{
 
  
 
-    .blog-top{
-        flex-direction: column;
-    }
-    .blog-body{
-        flex-direction: column;
-    }
     .blog{
+        flex-direction: column;
         .blog-copy{
-            width: 100%;
+            width: 90%;
+        }
+    
+        .blog-top{
+            flex-direction: column;
+        }
+        .blog-body{
+            flex-direction: column;
         }
     }
+
 
     
     .skill{
@@ -770,4 +775,16 @@ footer{
 
 
 
+}
+
+
+@media screen and (max-width:767px){
+    .blog{
+        .blog-copy{
+            margin: 1em;
+        }
+        .blog-top{
+            text-align: center;
+        }
+    }
 }
