--- a/css/style.scss
+++ b/css/style.scss
@@ -267,6 +267,8 @@ header{
 
     justify-content: center;
 
+    padding: 0.5em;
+
     ul, li {
         float: left;
     }
@@ -279,29 +281,41 @@ header{
     @include max-size();
     @include headings();
     @include paragraphs();
+
+    // border: 2px solid black;
     
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    border-radius: 0.5em;
 
     justify-content: space-between;
-    width: 94%;
-    height: 500px;
-    border-radius: 0.5em;
-    overflow: hidden;
-
-}
-
-.highlight-desc{
     background-color: $color4;
-    width: 28%;
-    min-width: 200px;
-    height: auto;
+
+
+
+    img{
+        // display: none;
+        width: 100%;
+        height: auto;
+    }
+
+    .highlight-desc{
+        width: 40%;
+    }
+    
 }
 
-.highlight-img{
-    width: 72%;
-    height: auto;
-    background-image: url(/img/computer.jpg);
-    background-size: cover;
-}
+
+
+
+
+// .highlight-img{
+//     width: 72%;
+//     // height: auto;
+//     // background-image: url(/img/computer.jpg);
+//     // background-size: cover;
+// }
 
 
 
@@ -741,13 +755,15 @@ footer{
         display: none;
     }
 
-    .highlight-desc{
-        width: auto;
-        height: fit-content;
-    }
-    .highlight-img{
-        width: 100%;
-        height: 100%;
+    .highlight{
+        .highlight-desc{
+            width: 100%;
+            // height: fit-content;
+        }
+        // .highlight-img{
+        //     width: 100%;
+        //     height: 100%;
+        // }
     }
 
  
