--- a/css/style.scss
+++ b/css/style.scss
@@ -144,6 +144,56 @@ header{
 }
 
 
+//
+// HAMBURGER MENU
+//
+.nav-toggle-label{
+    margin-right: 1em;
+    img{
+        width: 50px;
+        height: 50px;
+    }
+}
+
+.nav-toggle{
+    display: none;
+}
+
+.hamburger{
+
+    .hamburger-options{
+        display: none;
+        background-color: #035e7b;
+        height: 120px;
+        width: 100%;
+        text-align: center;
+        padding: 1em;
+        ul{
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+        li{
+            text-decoration: none;
+        }
+        a{
+            color: white;
+            text-decoration: none;
+            font-size: 1.1em;
+            font-family: sans-serif;
+            text-transform: uppercase;
+    
+            &:hover{
+                color: black;
+                transform: scale(1.2);
+            }
+        }
+    }
+}
+
+.nav-toggle:checked ~ nav {
+    display: block;
+}
 
 
 //
@@ -748,8 +798,14 @@ footer{
 //
 // MEDIA QUERY
 //
-@media screen and (max-width:767px){
+@media screen and (min-width:767px){
+    .nav-toggle-label{
+        display: none;
+    }
+}
 
+
+@media screen and (max-width:767px){
 
     .nav-list{
         display: none;
