--- a/css/style.scss
+++ b/css/style.scss
@@ -211,7 +211,7 @@ header{
     align-items: center;
 
 
-    background-image: url(/img/hero.jpg);
+    background-image: url(/src/img/hero.jpg);
 
     .hero-banner{
         background: rgba($color: #000000, $alpha: 0.7);
@@ -523,15 +523,15 @@ header{
 }
 
 .about-card1{
-    background-image: url(/img/property.jpg);
+    background-image: url(/src/img/property.jpg);
 }
 
 .about-card2{
-    background-image: url(/img/law.jpg);
+    background-image: url(/src/img/law.jpg);
 }
 
 .about-card3{
-    background-image: url(/img/code2.jpg);
+    background-image: url(/src/img/code.jpg);
 }
 
 
@@ -675,15 +675,15 @@ header{
 
 
 .contact-card1{
-    background-image: url(/img/code.jpg);
+    background-image: url(/src/img/code.jpg);
 }
 
 .contact-card2{
-    background-image: url(/img/branches.jpg);
+    background-image: url(/src/img/branches.jpg);
 }
 
 .contact-card3{
-    background-image: url(/img/accessibility.jpg);
+    background-image: url(/src/img/accessibility.jpg);
 }
 
 
